[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "st-paywall"
version = "1.0.1"
description = "A Python package for creating subscription Streamlit apps"
authors = [
    {name = "Tyler Richards", email = "tylerjrichards@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "stripe",
    "streamlit>=1.42.0",
]
requires-python = ">=3.8.0"
