
[project]
name = "st-paywall"
version = "1.0.2"
description = "A Python package for creating subscription Streamlit apps"
authors = [
    {name = "Tyler Richards", email = "tylerjrichards@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "stripe",
    "streamlit>=1.42.0",
    "httpx-oauth>=0.16.1",
    "pyjwt>=2.10.1",
    "authlib>=1.6.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools", "wheel"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
]
